# PicaSim-Modernised-version

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_STYLE.md  CopyStuff.bat  CopyTextures.bat  LICENSE.txt  Plan.md  README.md  VERSIONS.txt  macos_create_app_bundle.sh  macos_create_dmg.sh  macos_notarize.sh  vcpkg.json
.github/workflows/: macos-build.yml  windows-build.yml
cmake/: Platform.cmake
data/Fonts/: FontInfo.txt
data/SystemData/Audio/: 1000HzMono.raw  Beep22050Mono.raw  Glider22050Mono.raw  GliderWhistle22050Mono.raw  Motor22050Mono.raw  NewMotor44100Mono.raw  PetrolFlying44100Mono.raw  Vario22050Mono.raw  WindLoop22050Mono.raw
data/SystemData/Icons/: PicaSim.icns
data/SystemData/Objects/: Eagle0.ac  Eagle1.ac  Eagle2.ac  Eagle3.ac  LaunchMarker.3ds  Thermal.3ds  Tower.ac
data/SystemData/Panoramas/: rename.bat
data/SystemData/Shaders/: bloom_down.frag  bloom_up.frag  controller.frag  controller.vert  fullscreen.vert  fxaa.frag  model.frag  model.vert  overlay.frag  overlay.vert  plain.frag  plain.vert  plain_water.frag  plain_water.vert  shadow.vert  shadowcast.frag  shadowcast.vert  simple.frag  simple.vert  sky_hosek.frag  sky_hosek.vert  skybox.frag  skybox.vert  smoke.frag  smoke.vert  ssao.frag  ssao_blur.frag  terrain.frag  terrain.vert  terrain_panorama.frag  terrain_splat.frag  terrain_splat.vert  terrainshadowcsm.frag  terrainshadowcsm.vert  texturedmodel.frag  texturedmodel.vert  texturedmodel_separatespecular.frag  tonemap.frag
data/SystemSettings/AIControllers/: AllGliders.xml  AllPoweredPlanes.xml  DLGs.xml  LargeGliders.xml  MediumGliders.xml  WeaselFest.xml  Wings.xml
data/SystemSettings/Aeroplane/: ASW15.xml  AcroBat.xml  Ahi.xml  ArduCopter.xml  Banana.xml  BeginnerQuad.xml  CanardGlider.xml  CineDrone.xml  DeadstickTrainer.xml  Discus.xml  ElectricGlider.xml  ElectricKato.xml  ElectricNeoslope.xml  Extra3D.xml  Extra3DScaledUp.xml  ExtraControlLine.xml  F18Jet.xml  FpvFreestyle.xml  GeeBee.xml  Genie.xml  GltfEmbedded.xml  GltfTest.xml  Icarus.xml  Jackdaw.xml  Jart.xml  Kato.xml  LeFish.xml  LeFishUltralight.xml  Magpie.xml  MartinWing.xml  MaxBee.xml  MiniDLG.xml  Minimoa.xml  MoyesHangGlider.xml  Neoslope.xml  Notos.xml  Peacemaker.xml  Phase6.xml  PoweredTrainer.xml  PoweredTrainerPro.xml  (+20 more)
data/SystemSettings/Challenge/: Crosswind-Approach.xml  Deadstick-SpotLanding.xml  Drone-Precision-BeginnerQuad.xml  Drone-Slalom-FpvFreestyle.xml  Duration-Meadow-Notos.xml  Duration-RecreationGround-Icarus.xml  Limbo-Cliff-Weasel.xml  Limbo-Flatland-Extra3D.xml  Race-AroundTheIsland-GeeBee.xml  Race-Cliff-Banana.xml  Race-Cliff-Tigger.xml  Race-Cliff.xml  Race-CrossCountry-Discus.xml  Race-CrossCountry-Genie.xml  Race-CrossCountryIsland-ASW15.xml  Race-Flatland-Extra3D.xml  Race-Flatland-Genie.xml  Race-Flatland-Wasp.xml  Race-Mountain-Banana.xml  Race-Mountain-ThePlank.xml  Race-Pylon-SportRacer.xml  Race-SnowyHills-Spirit26.xml
data/SystemSettings/Controller/: Accelerometer.xml  AccelerometerWithFlaps.xml  AccelerometerWithThrottle.xml  BeginnerQuad.xml  ControlLineWithFlaps.xml  EraserVPP.xml  Extra3D.xml  FpvFreestyle.xml  LeFishMadStab.xml  Quark.xml  Quartz.xml  SingleStick.xml  SingleStickDualRates.xml  TrainerPowered.xml  Trapeze.xml  TwoSticksFourAxisGlider.xml  TwoSticksWithFlaps.xml  TwoSticksWithFlapsThrottle.xml  TwoSticksWithThrottle.xml  TwoSticksWithThrottleRetracts.xml  Wasp.xml
data/SystemSettings/Environment/: BeginnerField.xml  BreezyField.xml  Cliff.xml  CrosswindField.xml  DronePracticeArena.xml  DynamicSkyTest.xml  Flat.xml  Flatland3D.xml  FlatlandPanoramic.xml  GentleHills.xml  GustyField.xml  Hills.xml  Island.xml  LitermonthalleNalbach.xml  LowHills.xml  MeadowPanoramic.xml  MeadowSlope3D.xml  MeadowSlopePanoramic.xml  MountainsDynamicSoaring3D.xml  MountainsDynamicSoaringPanoramic.xml  MountainsPanoramic.xml  OrientationArena.xml  PicaSim.xml  RecreationGround3D.xml  RecreationGroundPanoramic.xml  Roundway.xml  ScenicHills.xml  SnowyHills3D.xml  (+2 more)
installer/: PicaSim.iss
source/Framework/: ArHosekSkyModel.cpp  ArHosekSkyModel.h  AudioManager.cpp  AudioManager.h  ButtonOverlay.cpp  ButtonOverlay.h  Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  Entity.h  EntityManager.cpp  EntityManager.h  FrameBufferObject.cpp  FrameBufferObject.h  Framework.h  FrameworkSettings.cpp  FrameworkSettings.h  Graphics.cpp  Graphics.h  HdrRenderTarget.cpp  HdrRenderTarget.h  Helpers.cpp  Helpers.h  HelpersXML.cpp  HelpersXML.h  LoadingScreenHelper.h  MemoryCheck.cpp  MemoryCheck.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleEngine.cpp  ParticleEngine.h  PostProcess.cpp  PostProcess.h  ProceduralSky.cpp  ProceduralSky.h  Profile.cpp  Profile.h  RenderManager.cpp  (+17 more)
source/Heightfield/: HeightfieldBuilder.cpp  HeightfieldBuilder.h  HeightfieldCommon.h  HeightfieldGenerator.cpp  HeightfieldGenerator.h  HeightfieldRuntime.cpp  HeightfieldRuntime.h  Plane.h
source/MapTrace/: readme.txt
source/PicaSim/: 3ds.cpp  3ds.h  AIController.h  AIControllerGlider.cpp  AIControllerGlider.h  AIControllerPowered.cpp  AIControllerPowered.h  AIControllerTug.cpp  AIControllerTug.h  Accelerometer.cpp  Accelerometer.h  Aerofoil.cpp  Aerofoil.h  AerofoilDefinition.cpp  AerofoilDefinition.h  AerofoilParameters.h  Aeroplane.cpp  Aeroplane.h  AeroplaneGraphics.cpp  AeroplaneGraphics.h  AeroplanePhysics.cpp  AeroplanePhysics.h  Challenge.cpp  Challenge.h  ChallengeDuration.cpp  ChallengeDuration.h  ChallengeFreeFly.cpp  ChallengeFreeFly.h  ChallengeLimbo.cpp  ChallengeLimbo.h  ChallengeRace.cpp  ChallengeRace.h  ConnectionListener.cpp  ConnectionListener.h  Controller.h  DamageManager.cpp  DamageManager.h  DimensionalScaling.h  Engine.h  Environment.cpp  (+62 more)
source/Platform/: FontRenderer.cpp  FontRenderer.h  GLCompat.h  Input.cpp  Input.h  OpenXRRuntime.cpp  OpenXRRuntime.h  Platform.h  PlatformSDL.cpp  S3ECompat.h  Texture.cpp  Texture.h  VRManager.cpp  VRManager.h  VRRuntime.h  Window.cpp  Window.h  imgui_impl_sdl2.cpp
source/tinyxml/: tinyxml.cpp  tinyxml.h
tools/: capture_golden.sh
(+306 files in other folders)
